src/test/ui/issues/issue-66353.stderr
error[E0277]: the trait bound `(): _A` is not satisfied
  --> $DIR/issue-66353.rs:12:14
   |
LL |     _Func::< <() as _A>::AssocT >::func(());
   |              ^^^^^^^^^^^^^^^^^^ the trait `_A` is not implemented for `()`

error[E0277]: the trait bound `(): _Func<_>` is not satisfied
  --> $DIR/issue-66353.rs:12:41
   |
LL |     _Func::< <() as _A>::AssocT >::func(());
   |     ----------------------------------- ^^ the trait `_Func<_>` is not implemented for `()`
   |     |
   |     required by a bound introduced by this call
   |
note: required by `_Func::func`
  --> $DIR/issue-66353.rs:4:5
   |
LL |     fn func(_: Self);
   |     ^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
